syntax = "proto3";

option go_package = "github.com/joachimblom-hanssen/Distributed_5/proto";

package auction;

service AuctionService {
  rpc Bid(BidRequest) returns (BidResponse);
  rpc Result(ResultRequest) returns (ResultResponse);
}

service ReplicationService {
  rpc ReplicateUpdate(UpdateRequest) returns (UpdateResponse);
}

message BidRequest {
  int32 amount = 1;
  string client_id = 2;
  string request_id = 3;
}

message BidResponse {
  Outcome outcome = 1;
  string message = 2;
}

message ResultRequest {}

message ResultResponse {
  AuctionStatus status = 1;
  int32 highest_bid = 2;
  string winner = 3;
}

message UpdateRequest {
  string request_id = 1;
  UpdateType type = 2;
  int32 amount = 3;
  string client_id = 4;
  Outcome outcome = 5;
}

message UpdateResponse {
  bool acknowledged = 1;
}

enum Outcome {
  SUCCESS = 0;
  FAIL = 1;
  EXCEPTION = 2;
}

enum AuctionStatus {
  ONGOING = 0;
  CLOSED = 1;
}

enum UpdateType {
  BID = 0;
}
